--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DB_USER=canvas
 DB_PASSWORD=123
 DB_NAME=canvas
+SQS_ENDPOINT_URL=http://localhost:9324
+AWS_ACCESS_KEY_ID=access
+AWS_SECRET_ACCESS_KEY=secretsecret
