format docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
-version: '3.8'
+version: "3.8"
+
 services:
   postgres:
     image: postgres:16
@@ -9,6 +10,7 @@ services:
       - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
+
   elasticmq:
     image: softwaremill/elasticmq-native
     ports:
@@ -16,6 +18,7 @@ services:
       - 9325:9325
     volumes:
       - ./elasticmq.conf:/opt/elasticmq.conf
+
   postgres-test:
     image: postgres:16
     environment:
@@ -24,9 +27,11 @@ services:
       POSTGRES_DB: template1
     ports:
       - 5433:5432
+
   elasticmq-test:
     image: softwaremill/elasticmq-native
     ports:
       - 9326:9324
+
 volumes:
   postgres:
